[tool.uv]

[project]
name = "llm-benchmark"
description = "LLM并发基准测试工具"
version = "0.1.0"
authors = [
    { name = "MartinDai", email = "xiaomingys@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "openai==2.14.0",
    "aiohttp==3.13.2",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
